# PileBot

./: .gitignore  Cargo.toml  README.md
src/: data.rs  dice_example.rs  dicelib.rs  interaction.rs  main.rs
src/commands/: dice.rs  flavor.rs  mod.rs  role.rs
src/interactions/: dice.rs
