[package]
name = "pile_bot"
version = "0.1.0"
authors = ["ash sabine <theavaliengineer@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

tracing-subscriber = "0.3.17"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

twilight = "0.15.1"
twilight-cache-inmemory = "0.15.4"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
dotenv = "0.15.0"
